tests/NormalTests/paczka1/fuzzy1/38497299.err
Error in line 9: JYhiJ A578 8,6
Error in line 10: JYhiJ A715 73,3
Error in line 19: Qa7P S8 -1,9
Error in line 12: 5QIdD2Q S8 68,8
Error in line 5: JyuvL S8 62,4
Error in line 25: QpYQPB S8 62,9
Error in line 27: QpYQPB S437 72,9
